<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Set</string>
    <string name="title_activity_main">Set</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="stats">Statistics</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_single_play">Singleplayer</string>
    <string name="hint">Hint</string>
    <string name="next_three">Draw 3</string>
    <string name="next_set">Next set</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_multi_play">Multiplayer</string>
    <string name="num_of_players">Number of players</string>
    <string name="reshuffling">Card Deck Reshuffling</string>
    <string name="num_players_prompt">Choose number of players</string>
    <string name="highScoreDeck">High Score</string>
    <string name="lastScoreDeck">Last Score</string>
    <string name="OK">OK</string>
    <string name="player_name">Player Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="new_high_score">NEW HIGH SCORE</string>
    <string name="pick_num_players">Pick number of players</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="num_players">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="title_activity_num_players">NumPlayersActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_single_results">SingleResultsActivity</string>
    <string name="title_activity_multi_results">MultiResultsActivity</string>
    <string name="timeout">Timeout length (in seconds)</string>

</resources>
