<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="hr.math.set.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
       	android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:src="@drawable/set_logo2" />

    <Button
        android:id="@+id/btnResumeGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@drawable/button_shape_blue"
        android:onClick="rsmSinglePlay"
        android:text="@string/resume_game"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@drawable/button_shape_green"
        android:onClick="newSinglePlay"
        android:text="@string/new_game"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@drawable/button_shape_magenta"
        android:onClick="newMultiPlay"
        android:text="@string/multiplayer"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnStats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@drawable/button_shape_blue"
        android:onClick="statistics"
        android:text="@string/stats"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@drawable/button_shape_green"
        android:onClick="settings"
        android:text="@string/settings"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:background="@drawable/button_shape_magenta"
        android:onClick="exit"
        android:text="@string/exit"
        android:textColor="#FFFFFF" />

</LinearLayout>